--- a/style.css
+++ b/style.css
@@ -93,9 +93,20 @@ button:active {
 /* Portada */
 
 #portada{
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	height: 100vh;
+	width: 100%;
+}
+
+#portada div {
+	display: flex;
+	align-items: center;
+	justify-content: center;
 	margin: 100px auto;
 	width: 100%;
-	height: 306px;
+	height: 350px;
 	padding: 100px 15px;
 	background: linear-gradient(#24252a,#24252a,#24252ae0);
 	display: flex;
@@ -103,18 +114,23 @@ button:active {
 }
 
 #portada h1{
+	font-size: 3rem;
+	text-align: center;
+	padding: 0 0 10px 0;
+	color: white;
+}
+
+#portada h3{
 	font-size: 2.7rem;
 	text-align: center;
 	padding: 0 0 20px 0;
 	color: white;
-	padding-bottom: 35px;
 }
 
-#portada h3{
-	font-size: 2rem;
-	text-align: center;
-	padding: 0 0 20px 0;
-	color: white;
+#portada h3 span {
+	background: linear-gradient(#029bc2,#21c5ee);
+	background-clip: text;
+	color: transparent; 
 }
 
 #portada p{
