--- a/style.css
+++ b/style.css
@@ -130,7 +130,8 @@ button:active {
 #portada h3 span {
 	background: linear-gradient(#029bc2,#21c5ee);
 	background-clip: text;
-	color: transparent; 
+	color: transparent;
+	width: 131.6px;
 }
 
 #portada p{
@@ -138,7 +139,7 @@ button:active {
 	width: 100%;
 	text-align: center;
 	color: white;
-	font-size: 1.05rem;
+	font-size: 1.1rem;
 }
 
 .socials {
@@ -184,6 +185,10 @@ button:active {
 
 #main{
 	margin-bottom: 100px;
+}
+
+.span-anim {
+
 }
 
 /* Projects */
@@ -350,6 +355,7 @@ hr {
 	margin: 0 2px;
 	margin-bottom: 10px;
 	padding: 2px;
+	user-select: none;
 }
 
 .tec-especial {
@@ -573,6 +579,7 @@ footer {
 	font-weight: 400;
 	text-transform: capitalize;
 	line-height: 3rem;
+	user-select: none;
 }
 
 .footer-content p {
@@ -861,7 +868,7 @@ footer {
 
 	.tec div {
 		font-size: 12.5px;
-		margin-bottom: 6.5px;
+		margin-bottom: 7px;
 	}
 
 	.description-div p {
