--- a/style.css
+++ b/style.css
@@ -228,7 +228,7 @@ hr {
 	flex-direction: column;
 	align-items: center;
 	justify-content: flex-start;
-	height: 500px;
+	height: 420px;
 	width: 350px;
 	border: 2px solid #24252a;
 	border-radius: 10px;
@@ -244,7 +244,7 @@ hr {
 
 .img-div {
 	border-bottom: 2px solid #24252a;
-	height: 300px;
+	height: 220px;
 	overflow: hidden;
 }
 
@@ -257,7 +257,7 @@ hr {
 .project-div img {
 	display: block;
 	object-fit: cover;
-	height: 300px;
+	height: 220px;
 	width: 396px;
 	border-radius: 10px;
 	margin-top: -20px;
@@ -349,7 +349,7 @@ hr {
 	width: 100%;
 	display: flex;
 	flex-wrap: wrap;
-	padding: 0 16px;
+	padding: 0 14px;
 	margin-top: 5px;
 }
 
@@ -893,6 +893,10 @@ footer {
 
 	.description-div-2 ul li a {
 		font-size: 0.98rem;
+	}
+
+	.project-div{
+		width: 85vw;
 	}
 
 }
