--- a/style.css
+++ b/style.css
@@ -235,7 +235,6 @@ hr {
 	border-radius: 10px;
 	overflow: hidden;
 	margin: 18px 15px;
-	box-shadow: 1px 1px 5px black;
 	background: #24252a;
 }
 
@@ -300,7 +299,7 @@ hr {
 
 .title-github ul li a i{
 	font-size: 1.3em;
-	transition: 0.2s ease-in;
+	transition: 0.2s;
 }
 
 .title-github ul li a i:hover{
@@ -359,6 +358,11 @@ hr {
 	margin-bottom: 10px;
 	padding: 2px;
 	user-select: none;
+	transition: 0.2s;
+}
+
+.tec div:hover {
+	transform: scale(1.1);
 }
 
 .tec-especial {
@@ -454,6 +458,11 @@ hr {
 	font-size: 1.06rem;
 	color: #24252a;
 	font-weight: 500;
+	transition: 0.2s;
+}
+
+.rec-parrafo:hover {
+	transform: scale(1.1);
 }
 
 .btn-left {
@@ -471,6 +480,7 @@ hr {
 	margin-bottom: -50px;
 	padding-right: 2px;
 	font-size: 1.05rem;
+	transition: 0.2s;
 }
 
 .btn-left:hover {
@@ -480,7 +490,6 @@ hr {
 .btn-left:active {
 	background: linear-gradient(#24252a,#24252a,#24252ace);
 	transform: scale(0.9);
-	padding-right: 4px;
 }
 
 .btn-right {
@@ -498,6 +507,7 @@ hr {
 	margin-bottom: -50px;
 	padding-left: 2px;
 	font-size: 1.05rem;
+	transition: 0.2s;
 }
 
 .btn-right:hover {
@@ -507,7 +517,6 @@ hr {
 .btn-right:active {
 	background: linear-gradient(#24252a,#24252a,#24252ace);
 	transform: scale(0.9);
-	padding-left: 0px;
 }
 
 .container-dot {
@@ -543,6 +552,7 @@ hr {
 	background: linear-gradient(#21c5ee,#026881);
 	border-radius: 50%;
 	cursor: pointer;
+	transition: 0.2s;
 }
 
 .go-top-button:hover{
