--- a/style.css
+++ b/style.css
@@ -802,6 +802,10 @@ footer {
 		font-size: 1.72rem;
 	}
 
+	.name-div {
+		font-size: 1.8rem;
+	}
+
 	/* recomendations */
 
 	.recomendaciones-div {
